 * add motioneye-client-0.3.6
 * add PyMetEireann-0.2
 * add python-picnic-api-1.1.0
 * add kostal-plenticore-0.2.0
 * bump aiohue-2.3.1
 * bump denonavr (is partly in main repo)
 * update homeassistant-2021.5.3
 * update aioasuswrt-1.3.4
 * update pyhaversion-21.5.0
 * update homeassistant-2021.5.4
 * update maxcube-api-0.4.3
 * update platformio-5.1.1.ebuild
 * update esphome-1.17.2

2021-05-14
 * update astral-2.2
 * update watchdog-2.0.3
 * bump snapcast-2.1.3
 * bump wakeonlan-2.0.1
 * bump pyairvisual-5.0.8
 * bump aioambient-1.2.4
 * update adb-shell-0.3.1
 * update python-socketio-4.6.0-r1
 * bump androidtv-0.0.58
 * update pubnub-5.1.3
 * update yalexs-1.1.4
 * bump brother-1.0.0
 * update pyclimacell-0.18.2
 * update pycognito-2021.3.1
 * update hass-nabucasa-0.43.0
 * restore (still needed) acme-1.12.0 from commit 266c660
 * bump pydeconz-79
 * update aiodiscover-1.4.0, add pyroute2-0.5.18
 * bump fritzconnection-1.4.2
 * bump async-upnp-client-0.16.2
 * bump dsmr-parser-0.29
 * bump python-ecobee-api-0.2.11
 * bump pyeconet-0.1.14
 * bump pysml-0.0.5
 * bump envoy-reader-0.18.4
 * bump pyEzviz-0.1.8.7
 * bump faadelays-0.0.7
 * bump httplib2-0.19.0
 * bump greeclimate-0.11.4, bump pycryptodome-3.9.8
 * restore httplib2-0.19.0-r1 from main repo
 * add adafruit-circuitpython-dht-3.6.0
 * bump aiohue-2.3.0
 * bump hyperion-py-0.7.4
 * bump growattServer-1.0.0

2021-04-24 homeassistant-2021.4.6
 * bump aiohomekit-0.2.61
 * bump maxcube-api-0.4.2
 * bump nexia-0.9.6
 * bump ha-philipsjs-2.7.0
 * update homeassistant-2021.4.4
 * bump spotipy-2.18.0
 * bump aiodiscover-1.3.4
 * update homeassistant-2021.4.5
 * update PyMetno-0.8.2
 * update homeassistant-2021.4.6
 * add async-dns-1.1.10 (fixes https://git.edevau.net/onkelbeh/HomeAssistantRepository/issues/201)

2021-04-10 homeassistant-2021.4.3
 * remove /update EAPI5 Ebuilds
 * re-add geopy-1.21.0
 * bump pychromecast-9.1.2
 * bump speedtest-cli-2.1.2
 * bump home-assistant-frontend-20210407.1