@@ -1,0 +1,3 @@
+DIST ajsonrpc-1.1.0.tar.gz 21961 BLAKE2B ef9adda645de50e3ac9bc68b7174b31cedc59c8a11e8d2cfd6aebb2f3a6f2ef857071590ddb1c9458dc9082f6a63856bcfa94e4087f1dea0ad3df6391b75160f SHA512 98143dbf000c8deeb5c72ca38b8321e0ebf77ed16f9ab6800b4a4ad254f8ada8a1fd4c19cd6a7f70633857e0442224d510fdb6a6b2e03a0d91559d66e15a6016
+EBUILD ajsonrpc-1.1.0.ebuild 698 BLAKE2B b5f28a4fc0f44b6de538a635c68050b899bad7f4390ed1160ae15c1f28b29e12061867d4e01f46a55ba7ff72aeb0d9bf2515501d9d6ab6bad000b6819f01524e SHA512 38d76c0b0ec50b231878f0da920571c53098b289a421050468f02b7d9cbb9f7e2758a1a1e17989b02e0132b6f4a1bc0c3d03f84d5c5b4f864b6769559220ef70
+MISC metadata.xml 442 BLAKE2B ebb7aef6f40872addac1c13b54d4280aefeb9ee1a43417ed1e45125e7a8fb866e05a08b0275019220f949aaf8ea41cf1ef07143c55a760d7347c25093f1e77cd SHA512 fbc8dc8f4524bdbfd066f2413cce9572c3dd9dc3b1f842c59c2f58b0fe24b88bf6a3e492a36b8ca4148f944275c5d584e038c40d346bbb04ca6d50baac3ea7b0
